--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button class="button" onclick="saludar()">Saludar</button>
     <br>
     <p id="mensaje"></p>
-    <img src="foto_mia.png" alt="Tu Foto" width="200">
+    <img src="imagenes/foto_nt.png" alt="Tu Foto" width="200">
   </div>
   <script src="script.js"></script>
 </body>
